objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>AutoRABIT Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>DNC</fullName>
        </values>
        <values>
            <fullName>Demo Performed</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Scheduled Demo</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
        <values>
            <fullName>Unresponsive</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Techsophy lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>DNC</fullName>
        </values>
        <values>
            <fullName>Demo Performed</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unresponsive</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF(IsConverted,ConvertedDate - DATEVALUE(CreatedDate), TODAY() - DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>AutoRABIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BPM Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Champ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emerging Technologies</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <inlineHelpText>Select the competitor</inlineHelpText>
        <label>Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>Copado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flosum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jitterbit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Odaseva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gearset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AssureClick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dream factory – Snapshot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dream factory – Cascade &amp; others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlassian - Bamboo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlassian - Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Implementation_Questionnaire__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Implementation Questionnaire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Infrastructure__c</fullName>
        <description>Infrastructure preference</description>
        <label>Infrastructure</label>
        <picklist>
            <picklistValues>
                <fullName>Shared</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclusive</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LeadType__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LeadType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mc_Subscriber_Status__c</fullName>
        <formula>text(MC4SF__MC_Subscriber__r.MC4SF__Member_Status__c)</formula>
        <label>Mc Subscriber Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Attachments__c</fullName>
        <label>No.of Attachments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Users__c</fullName>
        <label>No.of Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Competitors__c</fullName>
        <label>Other Competitors</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recordtype__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recordtype</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AutoRABIT_Open_Leads</fullName>
        <booleanFilter>(1 OR 3) AND 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.FIRST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.AutoRABIT_RecordType</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open,Qualified,Contacted,Scheduled Demo,Demo Performed</value>
        </filters>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>AutoRABIT</value>
        </filters>
        <label>AutoRABIT Open Leads</label>
        <language>en_US</language>
        <sharedTo>
            <group>AutoRABIT_Sales_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BPM_Leads</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>BPM Services</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>PSK</value>
        </filters>
        <label>BPM Leads</label>
        <sharedTo>
            <group>BPM_Services_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Consulting_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Pavan</value>
        </filters>
        <label>Consulting Leads</label>
        <sharedTo>
            <role>AutoRABIT</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Emerging_Technologies</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Emerging_Technologies_Record_Type</value>
        </filters>
        <label>Emerging Technologies</label>
        <sharedTo>
            <group>BPM_Services_Group</group>
            <group>Consulting_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Migile_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Migile_Record_Type</value>
        </filters>
        <label>Migile Leads</label>
        <sharedTo>
            <group>BPM_Services_Group</group>
            <group>Consulting_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Abhilash</value>
        </filters>
        <label>My Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Social_Champ_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Social_Champ</value>
        </filters>
        <label>Social Champ Leads</label>
        <sharedTo>
            <group>BPM_Services_Group</group>
            <group>Consulting_Group</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>AutoRABIT_RecordType</fullName>
        <active>true</active>
        <businessProcess>AutoRABIT Lead Process</businessProcess>
        <description>This record type defines Business Unit AutoRABIT</description>
        <label>AutoRABIT RecordType</label>
    </recordTypes>
    <recordTypes>
        <fullName>BPM_Record_Type</fullName>
        <active>true</active>
        <businessProcess>Techsophy lead Process</businessProcess>
        <description>This record type defines Business Unit  types related to BPM Services</description>
        <label>BPM Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Consulting_Record_Type</fullName>
        <active>true</active>
        <businessProcess>Techsophy lead Process</businessProcess>
        <description>This record type defines Business Unit types for Consulting</description>
        <label>Consulting Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Emerging_Technologies_Record_Type</fullName>
        <active>true</active>
        <businessProcess>Techsophy lead Process</businessProcess>
        <label>Emerging Technologies Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Migile_Record_Type</fullName>
        <active>true</active>
        <businessProcess>Techsophy lead Process</businessProcess>
        <description>This record type defines Business Unit type for Migile</description>
        <label>Migile Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Social_Champ</fullName>
        <active>true</active>
        <businessProcess>Techsophy lead Process</businessProcess>
        <label>Social Champ Record Type</label>
    </recordTypes>
    <validationRules>
        <fullName>Address_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>City  = Null ||  State = Null</errorConditionFormula>
        <errorMessage>test validation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_Competitor_is_Others_Specify_it</fullName>
        <active>true</active>
        <errorConditionFormula>IF(INCLUDES(Competitor__c,&quot;Others&quot;),Other_Competitors__c==null,false)</errorConditionFormula>
        <errorDisplayField>Other_Competitors__c</errorDisplayField>
        <errorMessage>Other_Competitors__c field cannot be left blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_Lead_Conversion</fullName>
        <active>false</active>
        <description>This validation rule is to check if there are no attachments on conversion</description>
        <errorConditionFormula>AND( IsConverted ,  (ISBLANK(No_of_Attachments__c) || No_of_Attachments__c &lt;=0))</errorConditionFormula>
        <errorMessage>Please attach the necessary document and convert the Lead</errorMessage>
    </validationRules>
</CustomObject>